# pdf2cad

./: .gitignore  14-03-2025_14-08-05_v25-1-05-0.dmp  CMakeLists.txt  README.md  crash_report.txt  output.dxf  test.cpp  test.html  test_simple.cpp  vcpkg.json
include/: cad_generator.hpp  pdf_processor.hpp
src/: cad_generator.cpp  main.cpp  pdf_processor.cpp
